added array of arrays

--- a/index.html
+++ b/index.html
@@ -23,26 +23,8 @@
 				<input type="text" id="idc"><br/>
 			<button onclick=triangle()>Solve!</button>
 	</form>
-<script>
-
-	function triangleSolve (a, b, c) {
-		if (a==b && b==c && c==a){ 
-			return "Треугольник равносторонний";
-		} else if (a==b || b==c || c==a) { 
-			return "Треугольник равнобедренный";
-		} else { 
-			return "Треугольник разносторонний";
-		}
-	}
-	function triangle () {
-		var aSide = document.getElementById("ida").value;
-		var bSide = document.getElementById("idb").value;
-		var cSide = document.getElementById("idc").value;
-		alert (triangleSolve(aSide, bSide, cSide));
-
-	}
-
-</script>
+<script src="main.js"> </script>
+<script src="test.js"></script>r
 
 </body>
 </html>
