pathfinder site is completed

--- a/pathfinderTraining.html
+++ b/pathfinderTraining.html
@@ -11,12 +11,12 @@
 	BAB:<br>
 	<input type="text" id="bab"><br>
 	Ability modifier: <br>
-	<input type="text" id="mod"><br>
+	<input type="text" id="modifier"><br>
 	Enchant: <br>
 	<input type="text" id="enchant"><br>
 	Other bonuses: <br>
 	<input type="text" id="other"><br>
-	<button type="button" id="btn" onclick "result()">Result</button>
+	<button type="button" id="btn">Result</button>
 </form>
 <script src="pathfinderTraining.js"></script >
 </body>
