--- a/canvas.html
+++ b/canvas.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html> 
-	<head>
-		<meta charset="utf-8">
-		<title>Canvas</title>
-	</head>
+	<html>
 	<body>
 
-		<canvas id = "firstCanvas" width="500" height="500" style="border:1px solid #000000;"> 
-		</canvas>
+		<canvas id="myCanvas" width="500" height="500" style="border:1px solid #d3d3d3;">
+			Your browser does not support the HTML5 canvas tag.</canvas>
 
-		<script src="canvas.js"></script>
+		<script>
+			var c = document.getElementById('myCanvas');
+			var ctx = c.getContext('2d');
+			c.beginPath();
+			c.moveTo(10, 50);
+			c.lineTo(40, 90);
+			c.lineTo(120, 140);
+			c.lineTo(300, 338);
+			c.stroke();
+		</script>
+
 	</body>
+	</html>
