--- a/canvas.html
+++ b/canvas.html
@@ -9,6 +9,9 @@
 		<canvas id = "firstCanvas" width="500" height="500" style="border:1px solid #000000;"> 
 		</canvas>
 
+		<script src="task_matrix.js"></script>
 		<script src="canvas.js"></script>
 		<script src="life_game.js"></script>
+
 	</body>
+	</html>
