--- a/canvas.html
+++ b/canvas.html
@@ -11,7 +11,9 @@
 
 		<script src="task_matrix.js"></script>
 		<script src="canvas.js"></script>
-		<script src="life_game.js"></script>
+		<script src="snake.js"></script>
+
+	
 
 	</body>
 	</html>
