--- a/TravelBlog/blog.html
+++ b/TravelBlog/blog.html
@@ -41,9 +41,9 @@
                 <input  type = "radio" name = "slider" id = "switch2">
                 <input  type = "radio" name = "slider" id = "switch3">
 
-                  <div id="slides">
-                    <div id="overflow">
-                      <div class = "travelpic1 container">
+                  <div class="overflow">
+                    <div class="slides">
+                      <div class = "slide travelpic1" >
                          <!-- <div class="trtext">
                           <div class="travel1">
                             travel
@@ -54,7 +54,7 @@
                         </div>-->
                       </div>  
 
-                      <div class = "travelpic2 container">
+                      <div class = "slide travelpic2" >
                        <!-- <div class="trtext">
                           <div class="travel2">
                             travel
@@ -64,7 +64,7 @@
                           </div> 
                         </div> -->
                       </div> 
-                      <div class = "travelpic3 container">
+                      <div class = "slide travelpic3" >
                        <!-- <div class="trtext">
                           <div class="travel3">
                             travel
@@ -77,7 +77,7 @@
                     </div>
                   </div>
 
-                  <div id="control">
+                  <div id="controls">
                     <label for="switch1"></label>
                     <label for="switch2"></label>
                     <label for="switch3"></label>
